<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">SWADroid</string>
    <string name="serverName_preferences">Server</string>
    <string name="logout_preferences">Log Out of SWADroid</string>
    <string name="logout_title_preferences">Log Out</string>
    <string name="serverSummary_preferences">Server (without http://)</string>
    <string name="serverTitle_preferences">Server</string>
    <string name="loginModuleLabel">Login</string>
    <string name="notificationsModuleLabel">Notifications</string>
    <string name="notificationsMarkAllAsReadModuleLabel" translatable="false">NotificationsMarkAsRead</string>
    <string name="coursesModuleLabel">Courses</string>
    <string name="testsModuleLabel">Tests</string>
    <string name="messagesModuleLabel">Send message</string>
    <string name="noticesModuleLabel">Publish notice</string>
    <string name="generateQRModuleLabel">Generate QR code</string>
    <string name="title_error_dialog">ERROR</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="close_dialog">Close</string>
    <string name="set_preferences">Preferences</string>
    <string name="user_preferences">User data</string>
    <string name="userPasswordName_preferences">Password</string>
    <string name="userPasswordSummary_preferences">Password</string>
    <string name="userPasswordTitle_preferences">Password</string>
    <string name="preferencesTitle_menu">Preferences</string>
    <string name="shareTitle_menu">Share SWADroid</string>
    <string name="rateTitle_menu">Rate</string>
    <string name="cleanDatabaseTitle_menu">Clean database</string>
    <string name="about_preferences">About</string>
    <string name="versionTitle_preferences">Application version</string>
    <string name="author_title_preferences">Authors</string>
    <string name="loginProgressTitle">Login</string>
    <string name="loginProgressDescription">Connecting…</string>
    <string name="recoverPasswordProgressTitle">Recover password</string>
    <string name="recoverPasswordProgressDescription">Connecting…</string>
    <string name="coursesProgressTitle">Courses</string>
    <string name="coursesProgressDescription">Retrieving courses…</string>
    <string name="notificationsProgressTitle">Notifications</string>
    <string name="notificationsProgressDescription">Retrieving new notifications…</string>
    <string name="notificationsEmptyListMsg">Did not download any notification.\n\nTo download most recent
        notifications slide down this message.</string>
    <string name="testsDownloadProgressTitle">Tests</string>
    <string name="testsDownloadProgressDescription">Synchronizing test questions.\n\nDepending on the number of
        questions to synchronize, the data processing can take several minutes.\n\nPlease wait…</string>
    <string name="errorMsgLaunchingActivity">An error occurred during the execution of the
        operation</string>
    <string name="errorMsgNoConnection">No connection found</string>
    <string name="examAnnouncement">Exam announcement</string>
    <string name="marksFile">Marks file</string>
    <string name="notice">Notice</string>
    <string name="message">Message</string>
    <string name="forumPostCourse">Forum message</string>
    <string name="forumReply">Forum reply</string>
    <string name="messages">Messages</string>
    <string name="evaluation">Evaluation</string>
    <string name="assignment">Assignment</string>
    <string name="survey">Survey</string>
    <string name="documentFile">Document</string>
    <string name="sharedFile">Shared document</string>
    <string name="enrollment">Enrollment</string>
    <string name="enrollmentRequest">Enrollment request</string>
    <string name="unknownNotification">Unknown notification</string>
    <string name="noSubjectMsg">No subject</string>
    <string name="noContentMsg">No content</string>
    <string name="yesMsg">Yes</string>
    <string name="noMsg">No</string>
    <string name="trueMsg">True</string>
    <string name="falseMsg">False</string>
    <string name="acceptMsg">OK</string>
    <string name="cancelMsg">Cancel</string>
    <string name="allMsg">All</string>
    <string name="selectCourseTitle">Select course</string>
    <string name="noQuestionsAvailableTestsDownloadMsg">There are no questions available for this course</string>
    <string name="noQuestionsPluggableTestsDownloadMsg">The teacher does not allows the questions download</string>
    <string name="questionsTestsDownloadSuccesfulMsg">Questions downloaded successfully</string>
    <string name="testNoQuestionsCourseMsg">Not downloaded any test question for this course</string>
    <string name="testNoQuestionsMsg">Before performing a test you should download the test questions for at least
        one course</string>
    <string name="testNoQuestionsMeetsSpecifiedCriteriaMsg">There is no question that meets the specified
        criteria</string>
    <string name="testNumQuestionsMsg">Indicate the number of test questions</string>
    <string name="testTagsMsg">Select the tags that will be included in the test</string>
    <string name="testNoTagsSelectedMsg">You must select at least one tag</string>
    <string name="testAnswerTypesMsg">Select the answer types that will be included in the test</string>
    <string name="testNoAnswerTypesSelectedMsg">You must select at least one answer type</string>
    <string name="testEvaluateMsg">Evaluate</string>
    <string name="testResultsTextMsg">Score</string>
    <string name="testShowResultsMsg">Show totals</string>
    <string name="testShowResultsDetailsMsg">Show details</string>
    <string name="testNoDetailsMsg">The teacher does not allow to see the details</string>
    <string name="testNoResultsMsg">The teacher does not allow to see the results</string>
    <string name="errorBadLoginMsg">Username or password incorrect</string>
    <string name="errorServerResponseMsg">Error in server response</string>
    <string name="errorInternalServerMsg">Internal server error</string>
    <string name="errorBadAppKeyMsg">Unknown application key. Please contact the developer</string>
    <string name="errorConnectionMsg">Error while connecting to server</string>
    <string name="errorTimeoutMsg">Timeout trying to connect to the server</string>
    <string name="errorServiceUnavailableMsg">SWAD is under maintenance right now. Please try again later</string>
    <string name="sendingMessageMsg">Sending message…</string>
    <string name="messageSentMsg">Message sent successfully</string>
    <string name="noReceiversMsg">You must specify at least one recipient</string>
    <string name="noSubjectMessageMsg">You must enter the subject of the message</string>
    <string name="message_receivers_title">Receivers (separated by comma)</string>
    <string name="message_subject_title">Subject</string>
    <string name="message_body_title">Message</string>
    <string name="notice_body_title">Notice</string>
    <string name="publishingNotice">Publishing notice…</string>
    <string name="noticePublished">Notice published</string>
    <string name="noContentNoticeMsg">You must enter the contents of the notice</string>
    <string name="sendMsg">Send</string>
    <string name="selectRcvModuleLabel">Select Receivers</string>
    <string name="filterUsersListModuleLabel">Filter Receivers</string>
    <string name="acceptFilters">Filter</string>
    <string name="cancelFilters">Cancel</string>
    <string name="cleanDatabaseMsg">The database has been cleaned</string>
    <string name="cleanDatabaseDialogMsg">All data in the database will be deleted.\n\n
         Notifications, tests, group information and lists of users will be deleted.\n\n
         Are you sure you want to delete all data in the database?</string>
    <string name="shareBodyMsg">I\'m using #SWADroid in my Android mobile for access to
        the e-learning platform SWAD.\nGet it for free here:
        https://play.google.com/store/apps/details?id=es.ugr.swad.swadroid</string>
    <string name="marketURL" translatable="false">market://details?id=es.ugr.swad.swadroid</string>
    <string name="marketWebURL" translatable="false">http://goo.gl/Wgo1y</string>
    <string name="twitterURL" translatable="false">https://twitter.com/#!/SWADroid</string>
    <string name="facebookURL" translatable="false">https://www.facebook.com/SWADroid</string>
    <string name="googlePlusURL" translatable="false">http://goo.gl/kuezQ</string>
    <string name="blogURL" translatable="false">http://swadroid.wordpress.com</string>
    <string name="twitterUser" translatable="false">\@SWADroid</string>
    <string name="twitterTitle">Twitter</string>
    <string name="facebookTitle">Facebook</string>
    <string name="googlePlusTitle">Google+</string>
    <string name="blogTitle">Blog</string>
    <string name="marketTitle">Google Play</string>
    <string name="prefCatSyncTitle">Synchronization</string>
    <string name="prefSyncTimeTitle">Synchronization frecuency</string>
    <string name="prefSyncTimeSummary">Synchronization frecuency of notifications</string>
    <string name="prefSyncTimeKey" translatable="false">prefSyncTime</string>
    <string name="prefSyncEnableTitle">Auto Sync</string>
    <string name="prefSyncEnableSummary">Enable auto sync</string>
    <string name="prefSyncEnableKey" translatable="false">prefSyncEnable</string>
    <string name="prefCatNotifTitle">Notifications</string>
    <string name="prefNotifLimitTitle">Notifications limit</string>
    <string name="prefNotifLimitDialogMessage">Select the max number of notifications to be stored:</string>
    <string name="prefNotifLimitSuffix">notifications</string>
    <string name="prefNotifLimitKey" translatable="false">prefNotifLimit</string>
    <string name="notificationsAlertMsg">new notifications</string>
    <string name="footMessageMsg">Sent from</string>
    <string name="marksMsg">Click on the notification to view the mark.</string>
    <string name="clickToGetCourses">Click here to get your courses</string>
    <string name="users">Users</string>
    <string name="documentsDownloadModuleLabel">Documents</string>
    <string name="documentsDownloadProgressDescription">Getting files. \n\nDepending on the directory size, this could
        take several minutes.\n\nPlease wait…</string>
    <string name="clickToOpenFile">Click here to open the file</string>
    <string name="sharedsDownloadModuleLabel">Shared files</string>
    <string name="connectionRequired">Internet connection is required for this functionality</string>
    <string name="course">Course</string>
    <string name="vacants">Vacants</string>
    <string name="numStudent">No. of students</string>
    <string name="maxStudent">Max. students</string>
    <string name="sendingState">Sending to SWAD:</string>
    <string name="sendingStatePending">Pending</string>
    <string name="rollcallEvent">Rollcall event</string>
    <string name="prefNotifSoundKey" translatable="false">prefNotifSoundEnable</string>
    <string name="prefNotifVibrateKey" translatable="false">prefNotifVibrateEnable</string>
    <string name="prefNotifLightsKey" translatable="false">prefNotifLightsEnable</string>
    <string name="prefNotifSoundTitle">Sound</string>
    <string name="prefNotifSoundSummary">Enable/disable sound alerts for new notifications</string>
    <string name="prefNotifVibrateTitle">Vibration</string>
    <string name="prefNotifVibrateSummary">Enable/disable vibration alerts for new notifications</string>
    <string name="prefNotifLightsTitle">Led</string>
    <string name="prefNotifLightsSummary">Enable/disable led alerts for new notifications</string>
    <string name="changelogTitle">Changelog</string>
    <string name="passwordDialogTip">SWAD\'s password is at least 8 alphanumeric characters long</string>
    <string name="event">Event</string>
</resources>