<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_score"
        android:visible="false"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_accept"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/acceptMsg"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_evaluate"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/testEvaluateMsg"
        android:visible="false"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_show_details"
        android:title="@string/testShowResultsDetailsMsg"
        android:visible="false"
        android:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_show_totals"
        android:title="@string/testShowResultsMsg"
        android:visible="false"
        android:showAsAction="ifRoom|withText"/>

</menu>