<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="5dip">

    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="5dip"
            android:text="@string/passwordDialogTip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="italic"/>

    <EditText
            android:id="@+id/etpPassword"
            android:name="@string/userPasswordName_preferences"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:defaultValue=""
            android:hint="@string/userPasswordSummary_preferences"
            android:inputType="textPassword"
            android:key="userPasswordPref"
            android:title="@string/userPasswordTitle_preferences"/>

</LinearLayout>